<resources>
    <string name="app_name">Proyash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="blood_group_ab_negetive">AB<sup>-</sup></string>
    <string name="blood_group_a_negetive">A<sup>-</sup></string>
    <string name="blood_group_b_negetive">B<sup>-</sup></string>
    <string name="blood_group_o_negetive">O<sup>-</sup></string>

    <string name="blood_group_ab_positive">AB<sup>+</sup></string>
    <string name="blood_group_a_positive">A<sup>+</sup></string>
    <string name="blood_group_b_positive">B<sup>+</sup></string>
    <string name="blood_group_o_positive">O<sup>+</sup></string>

    <string name="donor_text"><u>ডোনার ফর্ম</u></string>
    <string name="sign_up"><u>সাইন আপ করুন  </u></string>
    <string name="reset_pass"><u>রিসেট করুন</u></string>
    <string name="log_in"><u>লগ ইন করুন</u></string>
    <string name="blood_group_text"><u>রক্তের গ্রুপ</u></string>
    <string name="tv_developer_info"><u>ডেভেলপার ইনফো</u></string>
    <string name="facebook_com_ochien"><u>facebook.com/ochien</u></string>
    <string name="facebook_com_foysal"><u>facebook.com/foysal_ahmed</u></string>
    <string name="text_about_app">প্রয়াস -২০: একতাই শক্তি, মানবতার জন্য উদ্যোগ\n\nপ্রয়াস -২০ হলো এমন একটি সংগঠন বা পরিবার,যার মূলমন্ত্র হলো বন্ধুত্বের বন্ধনকে আরও শক্তিশালী করে মানবতার কল্যাণে নিজেকে উৎসর্গ করা। এটি শুধু একটি সংগঠন নয়, এটি একে অপরের প্রতি দায়িত্ববোধ ও সহমর্মিতার প্রতিশ্রতি।প্রয়াস -২০ এর বিভিন্ন মহৎ লক্ষ্যগুলোকে আরও প্রাণবন্তভাবে তুলে ধরার জন্য কিছু অনন্য দিক তুলে ধরা হলো:\n\n১. রক্তদান: প্রাণের সেতু\n\t•\tকাজের দিক: রক্তদান শুধু জীবনের প্রয়োজনে নয়, বরং মানবতার সেবা। প্রয়াস -২০ এর রক্তদাতা  যেকোনো সময় মানুষের জীবন রক্ষায় প্রস্তুত রয়েছে।\n\t•\tউন্নয়ন পরিকল্পনা: সদস্যদের নিয়ে একটি স্বেচ্ছাসেবী রক্তদাতার তথ্যভাণ্ডার তৈরি করে তাৎক্ষণিকভাবে রক্ত সরবরাহ নিশ্চিত করা যায়। বিভিন্ন সময় রক্তদান ক্যাম্প আয়োজন করে সমাজের অন্যান্যদেরও উৎসাহিত করা যেতে পারে।\n\n২. তথ্য সহায়তা: আলো হাতে চলার প্রতিজ্ঞা\n•\tকাজের দিক: প্রয়োজনীয় তথ্যের অভাবে মানুষ প্রায়ই অন্ধকারে থাকে। প্রয়াস -২০ এর লক্ষ্য হলো সঠিক তথ্য দিয়ে সদস্যদের আলোকিত করা এবং তাদের সমস্যার দ্রুত সমাধান করা।\n\t•\tউন্নয়ন পরিকল্পনা: ডিজিটাল তথ্য সহায়তা প্ল্যাটফর্ম বা একটি বিশেষ তথ্য ডেস্ক তৈরি করে প্রয়োজনীয় সব তথ্য সহজলভ্য করা যেতে পারে। এখানে শিক্ষামূলক, স্বাস্থ্যসেবা ও পেশাগত পরামর্শ দেওয়া হবে। বন্ধুদের প্রয়োজনে বিভিন্ন তথ্যাদি সরবরাহ করে পাশে থাকতে পারা। \n\n৩. আর্থিক সহায়তা: সহমর্মিতার সেতু\n\t•\tকাজের দিক: অর্থনৈতিক সংকটে পড়া কোনো শিক্ষার্থীর পাশে দাঁড়ানো প্রয়াস -২০ এর অন্যতম গুরুত্বপূর্ণ কাজ। সংকটের সময় আর্থিক সহায়তা দেওয়ার মাধ্যমে মানবতার সেবায় প্রতিজ্ঞাবদ্ধ থাকতে পারে। সেজন্য এখানে গঠিত রয়েছে একটি আর্থিক সহায়তাকারী পরিষদ। \n\t•\tউন্নয়ন পরিকল্পনা: একটি স্বতন্ত্র তহবিল গঠন করা, যেখানে সদস্যরা নিয়মিতভাবে অনুদান দিতে পারেন। এই তহবিল থেকে চিকিৎসা, শিক্ষা এবং জরুরি প্রয়োজনে সহায়তা প্রদান করা সম্ভব।এবং স্বচ্ছতা ও জবাবদিহিতার মাধ্যমে অর্থ সংরক্ষণ ও বন্টনের বিষয়টা নিশ্চিত করা হয়।\n\n৪. ভাতৃত্ব ও মেলবন্ধন: হৃদয়ের বন্ধন\n\t•\tকাজের দিক: বন্ধুত্ব ও ভাতৃত্ব হলো প্রয়াস -২০ এর প্রাণ। এটি এমন একটি নেটওয়ার্ক, যেখানে প্রত্যেকে অন্যের পাশে আছে এবং সহযোগিতার হাত বাড়িয়ে দেয়। সংকটের সময় একে অপরের পাশে থাকতে পারাটাই হচ্ছে এই পরিবারের মূলমন্ত্র। \n\t•\tউন্নয়ন পরিকল্পনা: নিয়মিত সামাজিক ও সাংস্কৃতিক অনুষ্ঠান, মিলনমেলা এবং আড্ডার মাধ্যমে সদস্যদের মধ্যে গভীর সম্পর্ক তৈরি করা। বিভিন্ন উৎসবে, পিকনিক বা রিইউনিয়নের আয়োজন এই বন্ধনকে মজবুত করে।\n\n৫. সম্পর্ক গঠন: সুসম্পর্কের সুবাস\n•\tকাজের দিক: প্রয়াস -২০ এর লক্ষ্য হলো এমন একটি কমিউনিটি তৈরি করা, যেখানে পারস্পরিক সম্মান, বিশ্বাস এবং সহযোগিতার ভিত্তিতে দীর্ঘস্থায়ী সম্পর্ক গড়ে ওঠে।\n\t•\tউন্নয়ন পরিকল্পনা: পারস্পরিক যোগাযোগ বাড়াতে অনলাইন এবং অফলাইন প্ল্যাটফর্ম ব্যবহার করা যেতে পারে। সামাজিক দায়বদ্ধতা ও কল্যাণমূলক কাজে একসাথে অংশগ্রহণ করে সম্পর্কের গভীরতা আরও বাড়ানো যাবে।\n\n৬. সমন্বয় সাধন: বিস্তৃত পরিসরে কাজ করার সুযোগ;\n• কাজের দিক: দশমিনা উপজেলায় সেবামূলক বিভিন্ন সংগঠনের সাথে সমন্বয়ে কাজ করা, এর মাধ্যমে সামাজিক পরিচিত ও প্রয়াস-২০ এর গ্রহণযোগ্যতা বহুলাংশে বৃদ্ধি পাবে। উচ্চপদস্থ ব্যক্তিবর্গ ও বিভিন্ন সংগঠনের সাথে সমস্বরে কাজ করতে হবে।\n\n\"\"প্রয়াস -২০ \"\'একটি স্বপ্ন, যেখানে একতাবদ্ধ হয়ে সবার জন্য কিছু করার অঙ্গীকার রয়েছে। এটি শুধু একটি সংগঠন নয়, বরং একটি পরিবার, যা বন্ধুত্ব, ভ্রাতৃত্ব, এবং সহযোগিতার মাধ্যমে একটি উন্নত সমাজ গড়ে তোলার প্রচেষ্টা চালিয়ে যাচ্ছে। সেই সাথে কাজ করছে সহপাঠীদের ব্যক্তিগত ও সামাজিক সমস্যা সমাধানে। সৃষ্টিকর্তার ইচ্ছা ও আমাদের কর্মগুনে আমরা আমাদের এই সংগঠনের উত্তরোত্তর সাফল্য কামনা করছি.</string>
    <string name="developer_thaughts">প্রয়াস এপটি মূলত দশমিনা উপজেলার সকল রক্তদাতাদের এক ছাদের নিচে আনার যে পরিকল্পনা তারই বাস্তবায়ন। এই অ্যাপটি যদি কারো সামান্যতম উপকারেও আসে তাহলে আমার কষ্ট সার্থক হবে। রাকিব কে ধন্যবাদ প্রয়াস ২০ ব্যাচের সকলকে একত্রিত করে রক্তদান গরিব দুঃখিদের সাহায্যকরনসহ বিভিন্ন উন্নয়ন ও সামাজিক কাজে উদ্বুদ্ধ করার জন্য। এছাড়া অ্যাপটি তৈরিতে যারা বিভিন্নভাবে আমাকে সাহায্য করেছেন তাদের প্রতি আমার অশেষ কৃতজ্ঞতা।</string>

    <string-array name="gender_list">
        <item>পুরুষ</item>
        <item>মহিলা</item>
    </string-array>

    <string-array name="union_list">
        <item>রণোগোপালদী</item>
        <item>বেতাগী সানকিপুরা</item>
        <item>আলিপুরা</item>
        <item>দশমিনা</item>
        <item>বহরমপুর</item>
        <item>বাঁশবাড়িয়া</item>
        <item>চর বোরহান</item>
    </string-array>

    <string-array name="blood_group_list">
        <item>AB+</item>
        <item>AB-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

</resources>